fix: compact_navbar burger was hiding behind me card

--- a/src/components/navbar/navbar.module.css
+++ b/src/components/navbar/navbar.module.css
@@ -67,6 +67,8 @@
 .base_compact button {
   background-color: transparent;
   border: none;
+  z-index: 10; 
+  position: relative;
 }
 
 .base_compact button svg {
